--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,16 @@
     </head>
     <body>
         <div id="items_div">
+            <h3>项目列表</h3>
             <ul id="items_ul"></ul>
             <div id="upload_div"><span>拖入上传</span></div>
         </div>
         <div id="elements_div">
+            <h3>元素列表</h3>
             <input id="name_input" type="text">
             <textarea id="element_textarea" readonly></textarea>
             <ul id="elements_ul"></ul>
+            <textarea id="console_textarea" readonly></textarea>
         </div>
         <div id="draw_div">
             <div id="frame_div"><canvas id="frame_canvas"></canvas></div>
