--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,17 +15,18 @@ body {
 #items_div {
     width: 350px; height: 100%;
     margin: 0px; padding: 0px;
+    border-right: 1px solid rgba(0, 0, 0, 1.0);
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.2);
 }
 #upload_div {
-    width: 350px; height: 150px;
+    width: 100%; height: 150px;
     margin: 0px; padding: 0px;
     border: 10px dashed rgba(0, 0, 0, 0.1); 
     display: flex;
     align-items: center; justify-content: center;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     position: relative;
 }
@@ -36,6 +37,7 @@ body {
 #elements_div {
     width: 350px; height: 100%;
     margin: 0px; padding: 0px;
+    border-right: 1px solid rgba(0, 0, 0, 1.0);
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.2);
@@ -45,23 +47,33 @@ body {
     margin: 0px; padding: 0px;
     background-color: rgba(0, 0, 0, 0.0);
     pointer-events: none;
+    box-sizing: border-box;
 }
 #element_textarea {
     width: 100%; height: 250px;
     margin: 0px; padding: 0px;
     background-color: rgba(0, 0, 0, 0.0);
     resize: none;
+    box-sizing: border-box;
+}
+#console_textarea {
+    width: 100%; height: 200px;
+    margin: 0px; padding: 0px;
+    background-color: rgba(0, 0, 0, 0.2);
+    resize: none;
+    box-sizing: border-box;
+    display: flex;
 }
 /* 绘图栏 */
 #draw_div {
     position: relative;
     margin: auto; padding: 0px; /* 自动margin居中 */
-    width: 640px; height: 640px;
+    width: 840px; height: 840px;
+    /* width: 100%; padding-bottom: 100%; */
     background-color: rgba(0, 0, 0, 0.2);
 }
 #frame_div, #drawn_div, #drawing_div {
     position: absolute;
-    top: 0px; left: 0px; width: 640px; height: 640px;
 }
 #frame_div {z-index: 1000;} #drawn_div {z-index: 2000;} #drawing_div {z-index: 3000;}
 /* 鼠标跟随 */
