--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ html {
     box-sizing: border-box;
     user-select: none;
 
-    background-image: url('wavy_grass.jpg');
+    background-image: url('Wavy_grass.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
